--- a/poster.html
+++ b/poster.html
@@ -146,7 +146,7 @@
                                 High-fidelity soundscape simulations that recreate real-world variability to benchmark detectors and trackers.
                             </p>
 
-                            <ul class="list-disc list-outside pl-4 text-slate-700 space-y-1 text-xs md:text-sm">
+                            <ul class="list-disc list-outside pl-4 text-slate-700 space-y-1 text-sm md:text-sm">
                                 <li>Recreate real-world variability.</li>
                                 <li>Produce realistic test datasets for detectors and trackers.</li>
                                 <li>Validate tracking and inform sensor deployment.</li>
