--- a/infographic.html
+++ b/infographic.html
@@ -377,7 +377,7 @@
                 return render;
             }
 
-            // --- Initialize Players ---
+            // --- Initialise Players ---
             const renderShrimpPlayer = createSoundCloudPlayer({
                 containerSelector: '#timeseries-chart-shrimp',
                 dataFile: './data/shrimp_timeseries.json',
