--- a/infographic.html
+++ b/infographic.html
@@ -109,8 +109,8 @@
                         <p class="text-xs text-gray-600" id="time-display-shrimp">0:00 / 0:00</p>
                     </div>
                     <audio id="audio-player-shrimp" class="hidden">
-                        <source src="./assets/shrimp_waveform.wav" type="audio/wav">
-                        <source src="./assets/shrimp_waveform.ogg" type="audio/ogg">
+                        <source src="./assets/shrimp_timeseries.wav" type="audio/wav">
+                        <source src="./assets/shrimp_timeseries.ogg" type="audio/ogg">
                         Your browser does not support the audio element.
                     </audio>
                </div>
