replace bursty, heavy-tailed, and impulsive icons with new designs

--- a/poster.html
+++ b/poster.html
@@ -221,21 +221,21 @@
                     <div class="text-center grid grid-cols-3 gap-4 mb-6">
                         <div class="bg-blue-50 p-3 rounded-lg border border-blue-200 flex flex-col justify-center">
                             <h3 class="font-bold text-blue-700 flex items-center justify-center">
-                                <img src="./assets/icon-bursty.svg" alt="Bursty" class="h-5 w-5 mr-2">
+                                <img src="./assets/icon-burst.svg" alt="Bursty" class="h-5 w-5 mr-2">
                                 Bursty
                             </h3>
                             <p class="text-xs text-blue-600">Snaps occur in non-independent clusters.</p>
                         </div>
                         <div class="bg-teal-50 p-3 rounded-lg border border-teal-200 flex flex-col justify-center">
                             <h3 class="font-bold text-teal-700 flex items-center justify-center">
-                                <img src="./assets/icon-heavy-tailed.svg" alt="Heavy-Tailed" class="h-5 w-5 mr-2">
+                                <img src="./assets/icon-tail.svg" alt="Heavy-Tailed" class="h-5 w-5 mr-2">
                                 Heavy-Tailed
                             </h3>
                             <p class="text-xs text-teal-600">Extreme events are more likely than in a Gaussian model.</p>
                         </div>
                         <div class="bg-red-50 p-3 rounded-lg border border-red-200 flex flex-col justify-center">
                              <h3 class="font-bold text-red-700 flex items-center justify-center">
-                                <img src="./assets/icon-impulsive.svg" alt="Impulsive" class="h-5 w-5 mr-2">
+                                <img src="./assets/icon-impulse.svg" alt="Impulsive" class="h-5 w-5 mr-2">
                                 Impulsive
                             </h3>
                             <p class="text-xs text-red-600">Frequent, high-amplitude clicks.</p>
