reword "composite" to "modelled" in snap waveform description

--- a/poster.html
+++ b/poster.html
@@ -258,7 +258,7 @@
                         <!-- Step 2 -->
                          <div class="p-4 rounded-lg bg-slate-50 border border-slate-200">
                             <h4 class="font-bold text-lg text-teal-600">2. Snap Waveform (What?)</h4>
-                            <p class="text-sm text-slate-600 mt-1">Each ~2ms snap is built using a <strong>Composite Waveform</strong>, representing the acoustic signature of a collapsing cavitation bubble. This captures the sharp, broadband nature of the sound.</p>
+                            <p class="text-sm text-slate-600 mt-1">Each ~2ms snap is built using a <strong>Modelled Waveform</strong>, representing the acoustic signature of a collapsing cavitation bubble. This captures the sharp, broadband nature of the sound.</p>
                             <figure class="w-5/6 mx-auto mt-2">
                                 <img src="./assets/snap_waveform.svg" alt="Modelled snap waveform" class="w-11/12 mx-auto">
                                 <figcaption class="text-center text-xs text-slate-600 mt-1">Figure 2. Modelled snap waveform (~2 ms).</figcaption>
