fix vertical spacing in "Noise Sources" section

--- a/poster.html
+++ b/poster.html
@@ -170,10 +170,12 @@
                         The ocean soundscape is a composite of sources, each dominating different parts of the frequency spectrum.
                     </p>
                     <div class="mt-6 space-y-3">
-                        <h3 class="font-semibold text-slate-800 flex items-center">
-                        <img src="./assets/icon-bio.svg" class="h-5 w-5 mr-2"> Biological
-                        </h3>
-                        <p class="text-sm text-slate-600">Marine life sounds (e.g., shrimp, whales, dolphins).</p>
+                        <div>
+                            <h3 class="font-semibold text-slate-800 flex items-center">
+                            <img src="./assets/icon-bio.svg" class="h-5 w-5 mr-2"> Biological
+                            </h3>
+                            <p class="text-sm text-slate-600">Marine life sounds (e.g., shrimp, whales, dolphins).</p>
+                        </div>
                         <div>
                             <h3 class="font-semibold text-slate-800 flex items-center">
                                 <img src="./assets/icon-anthro.svg" class="h-5 w-5 mr-2"> Anthropogenic
