darker green for >25 kHz box

--- a/poster.html
+++ b/poster.html
@@ -205,8 +205,8 @@
                             <h4 class="font-bold text-teal-700">0.5-25 kHz</h4>
                             <p class="text-slate-600 text-xs">Breaking waves, mid-freq. sonar, snapping shrimp</p>
                         </div>
-                        <div class="border-l-4 border-emerald-600 pl-3">
-                            <h4 class="font-bold text-emerald-700">&gt;25 kHz</h4>
+                        <div class="border-l-4 border-green-700 pl-3">
+                            <h4 class="font-bold text-green-800">&gt;25 kHz</h4>
                             <p class="text-slate-600 text-xs">Thermal noise, high-freq. sonar, dolphin echolocation</p>
                         </div>
                     </div>
